; ModuleID = '/home/carl/AnghaBench/esp-idf/components/freemodbus/common/extr_esp_modbus_master.c_mbc_master_set_descriptor.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/freemodbus/common/extr_esp_modbus_master.c_mbc_master_set_descriptor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 (i32*, i32)* }

@ESP_OK = common dso_local global i64 0, align 8
@master_interface_ptr = common dso_local global %struct.TYPE_2__* null, align 8
@ESP_ERR_INVALID_STATE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [47 x i8] c"Master interface is not correctly initialized.\00", align 1
@.str.1 = private unnamed_addr constant [56 x i8] c"SERIAL master set descriptor failure error=(0x%x) (%s).\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @mbc_master_set_descriptor(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i64, i64* @ESP_OK, align 8
  store i64 %6, i64* %5, align 8
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** @master_interface_ptr, align 8
  %8 = icmp ne %struct.TYPE_2__* %7, null
  %9 = zext i1 %8 to i32
  %10 = load i32, i32* @ESP_ERR_INVALID_STATE, align 4
  %11 = sext i32 %10 to i64
  %12 = call i32 (i32, i64, i8*, ...) @MB_MASTER_CHECK(i32 %9, i64 %11, i8* getelementptr inbounds ([47 x i8], [47 x i8]* @.str, i64 0, i64 0))
  %13 = load %struct.TYPE_2__*, %struct.TYPE_2__** @master_interface_ptr, align 8
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  %15 = load i64 (i32*, i32)*, i64 (i32*, i32)** %14, align 8
  %16 = icmp ne i64 (i32*, i32)* %15, null
  %17 = zext i1 %16 to i32
  %18 = load i32, i32* @ESP_ERR_INVALID_STATE, align 4
  %19 = sext i32 %18 to i64
  %20 = call i32 (i32, i64, i8*, ...) @MB_MASTER_CHECK(i32 %17, i64 %19, i8* getelementptr inbounds ([47 x i8], [47 x i8]* @.str, i64 0, i64 0))
  %21 = load %struct.TYPE_2__*, %struct.TYPE_2__** @master_interface_ptr, align 8
  %22 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i32 0, i32 0
  %23 = load i64 (i32*, i32)*, i64 (i32*, i32)** %22, align 8
  %24 = load i32*, i32** %3, align 8
  %25 = load i32, i32* %4, align 4
  %26 = call i64 %23(i32* %24, i32 %25)
  store i64 %26, i64* %5, align 8
  %27 = load i64, i64* %5, align 8
  %28 = load i64, i64* @ESP_OK, align 8
  %29 = icmp eq i64 %27, %28
  %30 = zext i1 %29 to i32
  %31 = load i64, i64* %5, align 8
  %32 = load i64, i64* %5, align 8
  %33 = load i64, i64* %5, align 8
  %34 = call i32 @esp_err_to_name(i64 %33)
  %35 = call i32 (i32, i64, i8*, ...) @MB_MASTER_CHECK(i32 %30, i64 %31, i8* getelementptr inbounds ([56 x i8], [56 x i8]* @.str.1, i64 0, i64 0), i64 %32, i32 %34)
  %36 = load i64, i64* @ESP_OK, align 8
  ret i64 %36
}

declare dso_local i32 @MB_MASTER_CHECK(i32, i64, i8*, ...) #1

declare dso_local i32 @esp_err_to_name(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
